# netmon

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  KNOWN_ISSUES.md  LICENSE  README.md  config.docker.yaml  config.example.yaml  conftest.py  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  ruff.toml
.github/workflows/: ci.yml
deploy/pi/: README.md  netmon.service
deploy/windows/: README.md  install-service.ps1  uninstall-service.ps1
docs/: ARCHITECTURE.md  DESIGN.md  SECURITY.md
netmon/: bandwidth.py  cleanup.py  config.py  dashboard.py  db.py  degraded.py  deviceauth.py  events.py  jobs.py  main.py  outage_detector.py  pinger.py  queries.py  report.py  runtime.py  schema.sql  speed_test.py  throughput.py  utils.py
netmon/static/: app.js  style.css
netmon/templates/: index.html  login.html  report.html
scripts/: add_bytes_columns.py  generate_report.py  init_db.py  migrate.py  run_dashboard.py  set_password.py  setup_db.py  test_pinger.py  test_speed_test.py
tests/: test_brand_logging.py  test_config.py  test_deviceauth.py  test_first_speed_test_time.py  test_gateway_resolution.py  test_group_outages.py  test_interface_resolution.py  test_login.py  test_pinger_state.py  test_speed_test_thresholds.py  test_throughput_sampler.py
